# hackage-cli

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  README.md  cabal.haskell-ci  cabal.project  fix-whitespace.yaml  hackage-cli.cabal  stack-8.10.7.yaml  stack-8.2.2.yaml  stack-8.4.4.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.0.2.yaml  stack-9.10.yaml  stack-9.12.yaml  stack-9.2.2.yaml  stack-9.2.4.yaml  stack-9.2.5.yaml  stack-9.2.6.yaml  stack-9.2.7.yaml  stack-9.4.3.yaml  stack-9.4.4.yaml  stack-9.4.5.yaml  stack-9.4.6.yaml  stack-9.4.7.yaml  stack-9.4.8.yaml  stack-9.6.2.yaml  stack-9.6.3.yaml  stack-9.6.yaml  stack-9.8.1.yaml  stack-9.8.yaml  stack.yaml
.github/workflows/: haskell-ci.yml  stack.yml
fixtures/: SVGFonts.1.2.diff  SVGFonts.1.cabal  SVGFonts.2.1.diff  SVGFonts.2.cabal  SVGFonts.orig.cabal  deepseq.0.1.diff  deepseq.1.0.diff  deepseq.1.cabal  semigroups.0.1.diff  semigroups.0.2.diff  semigroups.1.cabal  semigroups.2.0.diff  semigroups.2.cabal  tree-diff.0.1.diff  tree-diff.1.0.diff
lib/Distribution/Server/Util/: .CabalRevisions.hs.swn  CabalRevisions.hs
src/: CabalEdit.hs  IndexShaSum.hs  Main.hs
src/Distribution/Server/Util/: CabalRevisions.hs
tests/: Tests.hs
