cabal-version:       2.4
name:                hackage-cli
version:             0.1.0.0

synopsis:            CLI tool for Hackage
description:
  With @hackage-cli@ you can manage @.cabal@ files,
  e.g. upload revised variants.
homepage:            https://github.com/hvr/hackage-cli
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Development
build-type:          Simple
tested-with:
  GHC == 8.2.2
  GHC == 8.4.4
  GHC == 8.6.5

extra-source-files:
  fixtures/*.diff
  fixtures/*.cabal

source-repository head
  Type:     git
  Location: https://github.com/hvr/hackage-cli.git

library cabal-revisions
  X-SPDX-License-Identifier: BSD-3-Clause
  default-language:    Haskell2010
  hs-source-dirs:      lib
  ghc-options:         -Wall

  build-depends:
    , base         >= 4.10.0.0 && <4.13
    , bytestring  ^>= 0.10.4.0
    , Cabal       ^>= 2.4.1.0
    , containers   >= 0.5.0.0  && < 0.7
    , mtl         ^>= 2.2.2
    , pretty      ^>= 1.1.2

  exposed-modules:
    Distribution.Server.Util.CabalRevisions

test-suite cabal-revisions-tests
  default-language:    Haskell2010
  hs-source-dirs:      tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:
    , base
    , bytestring
    , Cabal
    , cabal-revisions
    , tasty        ^>= 1.2.1
    , tasty-golden ^>= 2.3.2
    , filepath     ^>= 1.4.0.0

executable hackage-cli
  default-language:    Haskell2010
  other-extensions:
    LambdaCase
    OverloadedStrings
    RecordWildCards
    TemplateHaskell

  hs-source-dirs:      src
  main-is:             Main.hs

  other-modules:
    IndexShaSum
    CabalEdit
    Paths_hackage_cli

  autogen-modules:
    Paths_hackage_cli

  build-depends:
    , base
    , bytestring
    , Cabal
    , cabal-revisions
    , containers
    , mtl

  build-depends:
    , aeson                 ^>= 1.4.2.0
    , deepseq               ^>= 1.4.0.0
    , directory             ^>= 1.2.0.1 || ^>= 1.3.0.0
    , filepath              ^>= 1.4.0.0
    , http-io-streams       ^>= 0.1.0.0
    , io-streams            ^>= 1.5.0.1
    , lens                  ^>= 4.17
    , netrc                 ^>= 0.2.0.0
    , optparse-applicative  ^>= 0.14
    , process-extras        ^>= 0.7.4
    , semigroups            ^>= 0.18.3
    , stringsearch          ^>= 0.3.6
    , tagsoup               ^>= 0.14
    , tar                   ^>= 0.5
    , text                  ^>= 1.2
    , time                  ^>= 1.5.0.1 || ^>= 1.6.0.1 || ^>= 1.8.0.2
    , unordered-containers  ^>= 0.2.7
    , zlib                  ^>= 0.6.1

  ghc-options: -Wall -threaded
